06-resources/compute.tf
resource "aws_instance" "web" {
    ami                         = "ami-0dfee6e7eb44d480b"
    associate_public_ip_address = true
    instance_type               = "t2.micro"
    subnet_id                   = aws_subnet.public.id
    vpc_security                = [aws_security_group.public_http_traffic.id]
    root_block_device {
        delete_on_termination = true
        volume_size           = 10
        volume_type           = "gp3"
    }

    tags = merge(local.common_tags, {
        Name = "06-resources-ec2"
    })

    lifecycle {
        create_before_destroy = true
    }
}

resource "aws_security_group" "public_http_traffic" {
    description = "Security group allowing traffic on ports 443 and 80"
    name        = "public-http-traffic"
    vpc_id      = aws_vpc.main.id

    tags = merge(local.common_tags, {
        Name = "06-resources-sg"
    })
}

resource "aws_vpc_security_group_ingress_rule" "http" {
    security_group_id = aws_security_group.public_http_traffic.id
    cidr_ipv4         = "0.0.0.0/0"
    from_port         = 80
    to_port           = 80
    ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_ingress_rule" "https" {
    security_group_id = aws_security_group.public_http_traffic.id
    cidr_ipv4         = "0.0.0.0/0"
    from_port         = 443
    to_port           = 443
    ip_protocol       = "tcp"
}
